Update about me photo update

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 </h1>
                 <div class="h-full grid grid-cols-1 gap-6 mx-20 sm:grid-cols-1 md::grid-cols-1 xl:grid-cols-2">
                     <div class="flex justify-center xl:p-6 lg:p-0">
-                        <img class="rounded-xl w-full xl:h-full xl:w-full lg:w-2/3 md:1/2" src="img/aanhetwerk.webp">
+                        <img class="rounded-xl w-full xl:h-full xl:w-full lg:w-2/3 md:1/2" src="img/workplace.jpg">
                     </div>
                     <div class="flex justify-center ">
                         <p class="mt-8">
