Deleted agenda section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
                     <li id="switchPortfolioWindow1" class="nav-item"><a class="nav-link rounded p-2" href="#portfolioWindow">Portfolio</a></li>
                     <li id="switchPortfolioMobile1" class="nav-item"><a class="nav-link rounded p-2" href="#portfolioMobile">Portfolio</a></li>
 
-                    <li class="nav-item"><a class="nav-link rounded p-2" href="#agenda">Agenda</a></li>
                     <li class="nav-item"><a class="nav-link rounded p-2" href="#contact">Contact</a></li>
                 </ul>
             </div>
@@ -47,7 +46,6 @@
                         <li id="switchPortfolioWindow2" class="nav-item"><a class="nav-link rounded p-2" href="#portfolioWindow">Portfolio</a></li>
                         <li id="switchPortfolioMobile2" class="nav-item"><a class="nav-link rounded p-2" href="#portfolioMobile">Portfolio</a></li>
 
-                        <li class="nav-item"><a class="nav-response-link rounded p-2" href="#agenda">Agenda</a></li>
                         <li class="nav-item"><a class="nav-response-link rounded p-2" href="#contact">Contact</a></li>
                     </div>
                 </ul>
@@ -82,7 +80,7 @@
                         <img class="rounded-xl w-full xl:h-full xl:w-full lg:w-2/3 md:1/2" src="img/workplace.jpg">
                     </div>
                     <div class="flex justify-center ">
-                        <p class="mt-8">
+                        <p id="text_aboutme" class="mt-8">
                             In zijn studietijd was Arnouts al bezig met onderzoek van de bolvorm en de
                             betekenis <br> voor zijn werk. Steeds meer wordt dit een uitgangspunt voor zijn
                             werk als symbool <br> voor de geboorte, aarde en kosmos.<br><br>
@@ -433,7 +431,8 @@
     </section>
     <!-- Einde portfolio -->
     <!-- Begin Event -->
-    <section id="agenda">
+
+    <!-- <section id="agenda">
         <div class="h-full mb-20">
             <div class="relative overflow-hidden py-16">
                 <h1 class="my-4 text-center mx-auto">
@@ -465,11 +464,12 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
+
     <!-- Einde Event -->
     <!-- Begin Contact -->
     <section id="contact">
-        <div class="h-full" style="background-color: #DDC6B6;">
+        <div class="h-full">
             <div class="relative overflow-hidden py-16">
                 <h1 class="my-4 mb-14 text-center mx-auto">
                     <span class="text-3xl font-bold leading-8 tracking-tight text-gray-900 sm:text-4xl">Contact</span>
