Contact page form design update

--- a/index.html
+++ b/index.html
@@ -482,19 +482,19 @@
                     <form  class="grid grid-cols-1 gap-y-6">
                         <div>
                             <label for="full-name" class="sr-only">Volledige naam:</label>
-                            <input type="text" name="full-name" id="full-name" autocomplete="name" class="block w-full rounded-md border-gray-300 py-3 px-4 placeholder-gray-500 shadow-sm focus:border-indigo-500 focus:ring-indigo-500" placeholder="Naam">
+                            <input type="text" name="full-name" id="full-name" autocomplete="name" class="contactFormData block w-full rounded-md border-gray-300 py-3 px-4 shadow-sm" placeholder="Naam">
                         </div>
                         <div>
                             <label for="email" class="sr-only">Email:</label>
-                            <input id="email" name="email" type="email" autocomplete="email" class="block w-full rounded-md border-gray-300 py-3 px-4 placeholder-gray-500 shadow-sm focus:border-indigo-500 focus:ring-indigo-500" placeholder="Email">
+                            <input id="email" name="email" type="email" autocomplete="email" class="contactFormData block w-full rounded-md border-gray-300 py-3 px-4 shadow-sm" placeholder="Email">
                         </div>
                         <div>
                             <label for="subject" class="sr-only">Onderwerp: </label>
-                            <input type="text" name="subject" id="subject" autocomplete="tel" class="block w-full rounded-md border-gray-300 py-3 px-4 placeholder-gray-500 shadow-sm focus:border-indigo-500 focus:ring-indigo-500" placeholder="Onderwerp">
+                            <input type="text" name="subject" id="subject" autocomplete="tel" class="contactFormData block w-full rounded-md border-gray-300 py-3 px-4 shadow-sm" placeholder="Onderwerp">
                         </div>
                         <div>
                             <label for="message" class="sr-only">Bericht:</label>
-                            <textarea id="message" name="message" rows="4" class="block w-full rounded-md border-gray-300 py-3 px-4 placeholder-gray-500 shadow-sm focus:border-indigo-500 focus:ring-indigo-500" placeholder="Bericht"></textarea>
+                            <textarea id="message" name="message" rows="4" class="contactFormData block w-full rounded-md border-gray-300 py-3 px-4 shadow-sm" placeholder="Bericht"></textarea>
                         </div>
                         <div>
                             <button onclick="sendEmail()" class="buttonSubmit rounded p-2" type="submit">Verzenden</button>
