--- a/index.html
+++ b/index.html
@@ -312,9 +312,9 @@
 
                         <a class="group">
                         <div class="relative aspect-w-1 aspect-h-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-7 xl:aspect-h-8">
-                            <img src="brons/symbiose.jpg" class="h-full w-full object-cover object-center">
-                            <p class="gallery_textName">Symbiose</p>
-                            <p class="gallery_cmText">65 cm</p>
+                            <img src="brons/sourire.jpg" class="h-full w-full object-cover object-center">
+                            <p class="gallery_textName">Sourire</p>
+                            <p class="gallery_cmText">52 cm</p>
                         </div>
                         </a>
 
@@ -378,9 +378,9 @@
 
                         <a class="group">
                         <div class="relative aspect-w-1 aspect-h-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-7 xl:aspect-h-8">
-                            <img src="keramiek/maskerade.jpg" class="h-full w-full object-cover object-center">
-                            <p class="gallery_textName">Maskerade</p>
-                            <p class="gallery_cmText">162 cm</p>
+                            <img src="keramiek/bovenOnder.jpg" class="h-full w-full object-cover object-center">
+                            <p class="gallery_textName">Boven & onder</p>
+                            <p class="gallery_cmText">24 cm</p>
                         </div>
                         </a>
 
@@ -410,9 +410,9 @@
 
                             <a class="group">
                             <div class="relative aspect-w-1 aspect-h-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-7 xl:aspect-h-8">
-                                <img src="keramiek/lachgas.jpg" class="h-full w-full object-cover object-center">
-                                <p class="gallery_textName">Lachgas</p>
-                                <p class="gallery_cmText">25 cm</p>
+                                <img src="keramiek/dialoog.jpg" class="h-full w-full object-cover object-center">
+                                <p class="gallery_textName">Dialoog</p>
+                                <p class="gallery_cmText">32 cm</p>
                             </div>
                             </a>
 
@@ -430,43 +430,6 @@
         </div>
     </section>
     <!-- Einde portfolio -->
-    <!-- Begin Event -->
-
-    <!-- <section id="agenda">
-        <div class="h-full mb-20">
-            <div class="relative overflow-hidden py-16">
-                <h1 class="my-4 text-center mx-auto">
-                    <span class="text-3xl font-bold leading-8 tracking-tight text-gray-900 sm:text-4xl">Agenda</span>
-                </h1>
-                <div class="mx-auto my-auto h-full max-w-7xl px-4 sm:px-6 lg:px-8">
-                    <ul role="list" class="space-y-3">
-                        <h1 class="text-2xl font-bold leading-8 tracking-tight text-gray-900 sm:text-2xl">14 september en 16 september 2019</h1>
-                        <li class="overflow-hidden bg-white px-4 py-12 sm:rounded-md sm:px-6" style="background-color: #DDC6B6;">
-                            <div class="flex">
-                                <div class="w-1/3">09:00 AM - 04:00 PM</div>
-                                <div class="w-1/2">
-                                    <h1 class="text-2xl font-semibold leading-8 tracking-tight text-gray-900 sm:text-2xl">Open Ateliers Oosterhout</h1>
-                                    <p>Location: Oosterhout, Venkelhof 6</p>
-                                </div>
-                            </div>
-                        </li>
-                        <h1 class="text-2xl font-bold leading-8 tracking-tight text-gray-900 sm:text-2xl">16 september en 17 september 2019</h1>
-                        <li class="overflow-hidden bg-white px-4 py-12 sm:rounded-md sm:px-6" style="background-color: #DDC6B6;">
-                            <div class="flex">
-                                <div class="w-1/3">09:00 AM - 04:00 PM</div>
-                                <div class="w-1/2">
-                                    <h1 class="text-2xl font-semibold leading-8 tracking-tight text-gray-900 sm:text-2xl">Brabant Art Fair</h1>
-                                    <p>Location: Breda, Markt, Grote Kerk Breda</p>
-                                </div>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </section> -->
-
-    <!-- Einde Event -->
     <!-- Begin Contact -->
     <section id="contact">
         <div class="h-full">
