--- a/index.html
+++ b/index.html
@@ -430,6 +430,43 @@
         </div>
     </section>
     <!-- Einde portfolio -->
+    <!-- Begin Event -->
+
+    <!-- <section id="agenda">
+        <div class="h-full mb-20">
+            <div class="relative overflow-hidden py-16">
+                <h1 class="my-4 text-center mx-auto">
+                    <span class="text-3xl font-bold leading-8 tracking-tight text-gray-900 sm:text-4xl">Agenda</span>
+                </h1>
+                <div class="mx-auto my-auto h-full max-w-7xl px-4 sm:px-6 lg:px-8">
+                    <ul role="list" class="space-y-3">
+                        <h1 class="text-2xl font-bold leading-8 tracking-tight text-gray-900 sm:text-2xl">14 september en 16 september 2019</h1>
+                        <li class="overflow-hidden bg-white px-4 py-12 sm:rounded-md sm:px-6" style="background-color: #DDC6B6;">
+                            <div class="flex">
+                                <div class="w-1/3">09:00 AM - 04:00 PM</div>
+                                <div class="w-1/2">
+                                    <h1 class="text-2xl font-semibold leading-8 tracking-tight text-gray-900 sm:text-2xl">Open Ateliers Oosterhout</h1>
+                                    <p>Location: Oosterhout, Venkelhof 6</p>
+                                </div>
+                            </div>
+                        </li>
+                        <h1 class="text-2xl font-bold leading-8 tracking-tight text-gray-900 sm:text-2xl">16 september en 17 september 2019</h1>
+                        <li class="overflow-hidden bg-white px-4 py-12 sm:rounded-md sm:px-6" style="background-color: #DDC6B6;">
+                            <div class="flex">
+                                <div class="w-1/3">09:00 AM - 04:00 PM</div>
+                                <div class="w-1/2">
+                                    <h1 class="text-2xl font-semibold leading-8 tracking-tight text-gray-900 sm:text-2xl">Brabant Art Fair</h1>
+                                    <p>Location: Breda, Markt, Grote Kerk Breda</p>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section> -->
+
+    <!-- Einde Event -->
     <!-- Begin Contact -->
     <section id="contact">
         <div class="h-full">
