--- a/index.html
+++ b/index.html
@@ -157,9 +157,9 @@
 
                         <a class="group">
                         <div class="grayoutimg relative aspect-w-1 aspect-h-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-7 xl:aspect-h-8">
-                            <img src="brons/symbiose.jpg" class="h-full w-full object-cover object-center">
-                            <p class="gallery__caption">Symbiose</p>
-                            <p class="gallery__cm">65 cm</p>
+                            <img src="brons/sourire.jpg" class="h-full w-full object-cover object-center">
+                            <p class="gallery__caption">Sourire</p>
+                            <p class="gallery__cm">52 cm</p>
                         </div>
                         </a>
 
@@ -218,9 +218,9 @@
 
                         <a class="group">
                         <div class="grayoutimg relative aspect-w-1 aspect-h-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-7 xl:aspect-h-8">
-                            <img src="keramiek/maskerade.jpg" class="h-full w-full object-cover object-center">
-                            <p class="gallery__caption">Maskerade</p>
-                            <p class="gallery__cm">162 cm</p>
+                            <img src="keramiek/bovenOnder.jpg" class="h-full w-full object-cover object-center">
+                            <p class="gallery__caption">Boven & onder</p>
+                            <p class="gallery__cm">24 cm</p>
                         </div>
                         </a>
 
@@ -250,9 +250,9 @@
 
                             <a class="group">
                             <div class="grayoutimg relative aspect-w-1 aspect-h-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-7 xl:aspect-h-8">
-                                <img src="keramiek/lachgas.jpg" class="h-full w-full object-cover object-center">
-                                <p class="gallery__caption">Lachgas</p>
-                                <p class="gallery__cm">25 cm</p>
+                                <img src="keramiek/dialoog.jpg" class="h-full w-full object-cover object-center">
+                                <p class="gallery__caption">Dialoog</p>
+                                <p class="gallery__cm">32 cm</p>
                             </div>
                             </a>
 
