--- a/index.html
+++ b/index.html
@@ -520,14 +520,14 @@ if (isset($_POST['submit'])) {
                 <h1 class="my-4 text-center mx-auto">
                     <span class="text-3xl font-bold leading-8 tracking-tight text-gray-900 sm:text-4xl">Keramiek brons video</span>
                 </h1>
-                <div class="mx-auto my-auto max-w-7xl px-4 sm:px-6 lg:px-8">
-                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/NNDKonAWHNM?si=XaDV7M6clPAkyi77">
-
+                <div class="mx-auto my-auto max-w-7xl px-4 sm:px-6 lg:px-8" style="height:600px;"> <!-- Set a specific height -->
+                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/NNDKonAWHNM?si=XaDV7M6clPAkyi77" frameborder="0" allowfullscreen>
                     </iframe>
                 </div>
             </div>
         </div>
     </section>
+    
 
     <!-- Einde Video -->
      <!-- Begin Event -->
